Send response on signup

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -49,7 +49,6 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Setting</a></li>
             <li>
               <h3>Welcome, {{userName}}</h3>
             </li>
@@ -63,7 +62,8 @@
         <div class="col-xs-12 col-sm-6 col-md-8">
           <div class="btn-group btn-group-lg btn-group-vertical" role="group" aria-label="...">
             <button type="button" class="btn btn-default">View All Books</button>
-            <button type="button" class="btn btn-default">Add books</button>
+            <button type="button" class="btn btn-default">Add Books</button>
+            <button type="button" class="btn btn-default">View Profile</button>
           </div>
         </div>
 
