--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -61,14 +61,20 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-8">
           <div class="btn-group btn-group-lg btn-group-vertical" role="group" aria-label="...">
-            <button type="button" class="btn btn-default">View All Books</button>
-            <button type="button" class="btn btn-default">Add Books</button>
-            <button type="button" class="btn btn-default">View Profile</button>
+            <button type="button" class="btn btn-default" id="viewbooks">View All Books</button>
+            <button type="button" class="btn btn-default" id="addbooks">Add Books</button>
+            <button type="button" class="btn btn-default" id="viewprofile">View Profile</button>
           </div>
         </div>
 
         <div class="col-xs-6 col-md-4">
-          
+          <div class="input-group" id="BookInfoInput" style="display:none">
+            <input type="text" class="form-control" placeholder="Book ISBN" aria-describedby="basic-addon1" id="isbn">
+            <input type="text" class="form-control" placeholder="Book Title" aria-describedby="basic-addon2" id="title">
+            <input type="text" class="form-control" placeholder="Author" aria-describedby="basic-addon2">
+            <input type="text" class="form-control" placeholder="Price" aria-describedby="basic-addon2">
+            <button type="button" class="btn btn-default" id="add_book_detail">Add</button>
+          </div>
         </div>
 
       </div>
@@ -80,5 +86,24 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript">
+
+      $('#addbooks').on("click", function(){
+          $('#BookInfoInput').show()
+      });
+
+      $('#add_book_detail').on("click", function(){
+          $.ajax({
+            type: "POST",
+            url: 'addbooks',
+            data: { isbn: $('#isbn').val(), title: $('#title').val() },
+            success:function(res){
+              console.log('server response is', res);
+          }});
+          $('#BookInfoInput').hide()
+      });
+
+    </script>
   </body>
 </html>
