--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -131,7 +131,7 @@
                     var title = data[i].title;
                     var price = data[i].price;
                     var author = data[i].author;
-                    var tData = '<tr><td class="filterable-cell">'+userid+'</td><td class="filterable-cell">'+isbn+'</td><td class="filterable-cell">'+title+'</td><td class="filterable-cell">'+price+'</td><td class="filterable-cell">'+author+'</td><td class="filterable-cell"><button type="button" class="btn btn-default" onclick="myFunction(this)" id='+isbn+'">Buy</button></td></tr>'
+                    var tData = '<tr><td class="filterable-cell">'+userid+'</td><td class="filterable-cell">'+isbn+'</td><td class="filterable-cell">'+title+'</td><td class="filterable-cell">'+price+'</td><td class="filterable-cell">'+author+'</td><td class="filterable-cell"><button type="button" class="btn btn-default" onclick="myFunction(this)" id="'+isbn+'#'+userid+'">Buy</button></td></tr>'
                     $("#t1").append(tData);
                   }
               }});
@@ -140,10 +140,14 @@
       });
 
       function myFunction(elem) {
+        var tokens = elem.id.split("#")
         $.ajax({
               type: "POST",
               url: '/buybooks',
-              data: { isbn: elem.id, userid: '{{userName}}' },
+              data: { isbn: tokens[0],
+                      clientid: '{{userName}}',
+                      ownerid: tokens[1]
+                    },
               success:function(res){
                   alert(res)
                 $('#booksinfo').hide()
