added notification button

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -50,6 +50,14 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li>
+              <div class = "navbar-form navbar-left">
+                <button class="btn btn-primary" type="button">
+              Notifications <span class="badge">{{count_req}}</span>
+              </button> 
+              </div>
+              
+            </li>
+            <li>
               <h3>Welcome, {{userName}}</h3>
             </li>
           </ul>
