--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Book trading club</title>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Book trading club</title>
 
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
@@ -24,7 +25,7 @@
 
 <body>
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color:#563d7c">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -33,28 +34,30 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Book Trading Club</a>
-        </div>
+        <a class="navbar-brand" href="#" style="color:white">Book Trading Club</a>
+      </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <div class = "navbar-form navbar-left">
-                <button class="btn btn-primary" type="button">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <div class="navbar-form navbar-left">
+              <button class="btn btn-primary" type="button">
               Notifications <span class="badge">{{countReq}}</span>
-              </button> 
-              </div>
-              
-            </li>
-            <li>
-              <h3>Welcome, {{userName}}</h3>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+              </button>
+            </div>
+
+          </li>
+          <li>
+            <h3 style="color:#ffe484">Welcome, {{userName}}</h3>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
 
 
   <div class="container">
@@ -66,7 +69,7 @@
           <button type="button" class="btn btn-default" id="viewprofile">View Profile</button>
         </div>
       </div>
-      
+
       <div id="btn-result" class="col-xs-8 col-sm-8 col-md-8">
         <div class="input-group" id="bookinput" style="display:none">
           <input type="text" class="form-control" placeholder="Book ISBN" aria-describedby="basic-addon1" id="isbn">
@@ -86,7 +89,7 @@
 
     </div>
   </div>
-      
+
   <footer>
     <p>Copyright {{currentYear}}</p>
   </footer>
@@ -116,7 +119,8 @@
         success: function(res) {
           alert(res)
           $('#bookinput').hide()
-        }});
+        }
+      });
     });
 
     $(document).ready(function() {
@@ -138,7 +142,8 @@
               var title = data[i].title;
               var price = data[i].price;
               var author = data[i].author;
-              var tData = '<tr><td>' + userid + '</td><td>' + isbn + '</td><td>' + title + '</td><td>' + price + '</td><td>' + author + '</td><td><button type="button" class="btn btn-default" onclick="myFunction(this)" id="'+isbn+'#'+userid+'">Buy</button></td></tr>'
+              var tData = '<tr><td>' + userid + '</td><td>' + isbn + '</td><td>' + title + '</td><td>' + price + '</td><td>' + author + '</td><td><button type="button" class="btn btn-default" onclick="myFunction(this)" id="' + isbn +
+                '#' + userid + '">Buy</button></td></tr>'
               $("#bookTable").append(tData);
             }
           }
@@ -155,14 +160,15 @@
       $.ajax({
         type: "POST",
         url: '/buybooks',
-        data: { isbn: tokens[0],
-                      clientid: '{{userName}}',
-                      ownerid: tokens[1]
-                    },
-              success:function(res){
-                  alert(res)
-                $('#booksinfo').hide()
-              }
+        data: {
+          isbn: tokens[0],
+          clientid: '{{userName}}',
+          ownerid: tokens[1]
+        },
+        success: function(res) {
+          alert(res)
+          $('#booksinfo').hide()
+        }
       });
     };
 
