--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -275,7 +275,8 @@
         },
         success: function(res) {
           alert(res)
-          location.href = "http://127.0.0.1:3000/dashboard/?userid1=" + {{userName}}
+       console.log('calling new dashboard')
+          location.href = "http://127.0.0.1:3000/dashboard/?userid1=" + '{{userName}}'
         }
       });
     };
@@ -289,7 +290,7 @@
         },
         success: function(res) {
           alert(res)
-          location.href = "http://127.0.0.1:3000/dashboard/?userid1=" + {{userName}}
+          location.href = "http://127.0.0.1:3000/dashboard/?userid1=" + '{{userName}}'
         }
       });
     };
@@ -303,7 +304,7 @@
         },
         success: function(res) {
           alert(res)
-          location.href = "http://127.0.0.1:3000/dashboard/?userid1=" + {{userName}}
+          location.href = "http://127.0.0.1:3000/dashboard/?userid1=" + '{{userName}}'
         }
       });
     };
